Fixing some bugs - Adding some features

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 <!-- Second Step -->
                 <div class="card" style="width: rem">
                     <div class="card-body">
-                        <h5 class="card-title text-secondary">Second Step</h5>
+                        <h5 class="card-title text-secondary">Second Step<span class="text-danger">*</span></h5>
                         <h6 class="card-text text-primary">
                             Preparing Cloudflare files to Migrate
                         </h6>
@@ -446,6 +446,7 @@
                 <!-- eof Third Step -->
                 <br />
                 <!-- https://console-intl.huaweicloud.com/apiexplorer/#/openapi/VOD/doc?api=ShowAssetMeta -->
+                
                 <!-- Fourth Step -->
                 <div class="card" style="width: rem">
                     <div class="card-body">
@@ -513,7 +514,7 @@
                                     class="form-control form-control-sm"
                                     id="db_host"
                                     aria-describedby="emailHelp"
-                                    placeholder="fwd82@live.com"
+                                    placeholder="localhost"
                                     name="db_host"
                                     value="localhost"
                                 />
@@ -531,7 +532,7 @@
                                     type="text"
                                     class="form-control form-control-sm"
                                     id="db_username"
-                                    placeholder="2590b14a48271988be21c06479697cee"
+                                    placeholder="root"
                                     name="db_username"
                                     value="root"
                                 />
@@ -548,7 +549,7 @@
                                     type="text"
                                     class="form-control form-control-sm"
                                     id="db_password"
-                                    placeholder=""
+                                    placeholder="*****"
                                     name="db_password"
                                     value=""
                                 />
@@ -570,7 +571,7 @@
                                             type="text"
                                             class="form-control form-control-sm"
                                             id="db_name"
-                                            placeholder=""
+                                            placeholder="rung"
                                             name="db_name"
                                             value="MyDB"
                                         />
@@ -592,7 +593,7 @@
                                             type="text"
                                             class="form-control form-control-sm"
                                             id="db_table_name"
-                                            placeholder=""
+                                            placeholder="videos"
                                             name="db_table_name"
                                             value="videos"
                                         />
@@ -616,7 +617,7 @@
                                             type="text"
                                             class="form-control form-control-sm"
                                             id="db_table_column"
-                                            placeholder=""
+                                            placeholder="url"
                                             name="db_table_column"
                                             value="video_links"
                                         />
