Renaming & Fixing files

--- a/index2.html
+++ b/index2.html
@@ -188,7 +188,7 @@
                         Convert to Compatibility Mode and save it.
                     </p>
                     <p class="card-text">
-                        In the next step we have to open <code>process_excel.php</code> and paste the correct name of
+                        In the next step we have to open <code>0-process_excel.php</code> and paste the correct name of
                         the excel sheet downloaded, probably it will be: <code>Video Details.xlsx</code>. Save the file
                         and click on below <strong>Clean the data</strong> button. It will generate another file with
                         name probably like: <code>cleaned_data-20240401000000.xlsx</code>
@@ -196,7 +196,7 @@
                     <p class="card-text">Open Huawei Cloud VOD <a
                             href="https://console-intl.huaweicloud.com/vod/?region=ap-southeast-3#/vod/videoManage">HERE</a>
                     </p>
-                    <a class="btn btn-primary btn-sm" href="4-process_excel.php" target="_blank" role="button">Clean the
+                    <a class="btn btn-primary btn-sm" href="0-process_excel.php" target="_blank" role="button">Clean the
                         data</a>
                 </div>
             </div>
