--- a/index.html
+++ b/index.html
@@ -170,26 +170,8 @@
                         <h6 class="card-text text-primary">
                             Preparing Cloudflare files to Migrate
                         </h6>
-                        <p class="card-text"></p>
-
                         <p class="card-text">
-                            Go to <code>index.js</code> and add your information
-                            <code>X-Auth-Email</code> and
-                            <code>X-Auth-Key</code>, once done, save the file,
-                            install <code>NodeJS</code> and run these commands
-                            <br /><code>npm i</code><br />
-                            and<br />
-                            <code>node index.js</code><br />
-                            it will create one Excel Sheet
-                            <code>Output_.....xlsx</code>. This file has
-                            different <code>Video UID</code>,
-                            <code>Link Status</code>,
-                            <code>Is Link Enabled</code>,
-                            <code>Default Link</code> and
-                            <code>Link With File Name</code>
-                        </p>
-                        <p class="card-text">
-                            Paste the links copied from above step or from
+                            Paste the .m3u8 links copied from above step or from
                             another source and paste it here to enable the mp4
                             formate and get the links. take care that each link
                             end with a comma '\n'.
@@ -319,14 +301,10 @@
                             Cloudstream to Huawei Cloud VOD
                         </h6>
                         <p class="card-text">
-                            Now, open <code>Output_....xlsx</code> and copy all
-                            the links from <code>Link With File Name</code> and
-                            paste it into
-                            <code
-                                >Huawei Cloud VOD > Upload Videos & Audio >
-                                Upload from URL</code
-                            >, to import videos to Huawei Cloud. Currently
-                            Huawei Cloud VOD only supports 100 links at a time.
+                            Paste the enabled mp4 links copied from above step
+                            or from another source and paste it here to store in
+                            huawei cloud. Take care that each link end with a
+                            new line '\n'.
                         </p>
                         <p class="card-text">
                             Until this stage, our videos are successfully
@@ -341,13 +319,6 @@
                         href="https://console-intl.huaweicloud.com/vod/?region=ap-southeast-3#/vod/audioVideoUrlPull"
                         target="_blank" title="OpenPull from URLs and paste all links" role="button">Open Huawei Cloud
                         VOD</a> -->
-
-                        <p class="card-text">
-                            Paste the enabled mp4 links copied from above step
-                            or from another source and paste it here to store in
-                            huawei cloud. Take care that each link end with a
-                            new line '\n'.
-                        </p>
                         <div id="lineCountDisplay">Number of Records: <span class='badge badge-primary badge-pill'>0</span></div>
                         <div class="mt-2" id="importedFromCloudflareToHuaweiLinks1">Batch Size of (100): <span class='badge badge-primary badge-pill'>0</span></div>
                         <textarea
