Adding return to dropdown

--- a/index.html
+++ b/index.html
@@ -469,11 +469,11 @@
                             >
                         </h5>
                         <h6 class="card-text text-primary">
-                            Gathering Credentials for Cloudflare
+                            Gathering Credentials for MySQL Database
                         </h6>
                         <p class="card-text">
                             Please enter your all credentials to continue with
-                            the later steps un-interruptedly.
+                            the later steps un-interruptedly. This credentials will be used to replace/update new links of Huawei Cloud VOD over Cloudflare links. Make sure to take backup out of your database table, and also enable <code>START TRANSACTION</code> so you can use <code>COMMIT</code> and <code>ROLLBACK</code> easily.
                         </p>
 
                         <form
@@ -622,12 +622,8 @@
                             Cloud VOD links
                         </h6>
                         <p class="card-text">
-                            Now open <code>5-script_db.php</code> and change the
-                            configuration for <code>$host</code>,
-                            <code>$dbname</code>, <code>$username</code> and
-                            <code>$password</code>. That's it, just click on
-                            below <code>Update the links</code> and you database
-                            will be updated with new links
+                            Please enter your all credentials to continue with
+                            the later steps un-interruptedly. This credentials will be used to replace/update new links of Huawei Cloud VOD over Cloudflare links. Make sure to take backup out of your database table, and also enable <code>START TRANSACTION</code> so you can use <code>COMMIT</code> and <code>ROLLBACK</code> easily.
                         </p>
 
                         <p class="card-text">
