Adding Total number of Mysql records

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                                 />
                                 <small
                                     id="small-projectId"
-                                    class="form-text text-muted">Please enter your domain for VOD that you have already put in Huawei Cloud > Domain Name Management, something like vod.example.com</small>
+                                    class="form-text text-muted">Please enter your domain for VOD that you have already put in Huawei Cloud > Domain Name Management, something like https://vod.example.com</small>
                             </div>
                         </form>
                     </div>
