Fixing some minor issues

--- a/index.html
+++ b/index.html
@@ -658,6 +658,7 @@
                             id="textareaHuaweiVideosLinks"
                             rows="10"
                             style="min-width: 100%; font-size: 10pt"
+                            disabled
                         ></textarea>
                         <br />
                         <a
