Updating index.html

--- a/index.html
+++ b/index.html
@@ -442,10 +442,9 @@
                             Getting new links from Huawei Cloud VOD
                         </h6>
                         <p class="card-text">
-                            Now that videos task is submitted. Please go <a href="https://console-intl.huaweicloud.com/vod/?agencyId=d0637be66122489b83317f41fb0dad2e&region=ap-southeast-3&locale=en-us#/vod/audioVideoUrlPull">Here</a> to check the status. Once everything is uploaded, and the status changes to <strong>Finished</strong> then we can go to this step to list all the videos from Huawei Cloud to get their links, so we can go for updating links in database.
+                            Now that videos task is submitted. Please go <a href="https://console-intl.huaweicloud.com/vod/?region=ap-southeast-3#/vod/audioVideoUrlPull">Here</a> <code>Huawei Cloud > VOD > Audio and Video Uploads > Pull from URLs </code>  to check the status. Once everything is uploaded, and the status changes to <strong><code>Completed</code></strong> then we can go to this step to list all the <code>Total Index</code> URLs from Huawei Cloud, so we can go for updating links in database.
                         </p>
-                        <p class="card-text">Open Huawei Cloud VOD
-                            <a href="https://console-intl.huaweicloud.com/vod/?region=ap-southeast-3#/vod/videoManage">HERE</a>
+                        <p class="card-text">Open Huawei Cloud VOD <a href="https://console-intl.huaweicloud.com/vod/?region=ap-southeast-3#/vod/videoManage">HERE</a> to see if all the transcoding is successfully done.
                         </p>
                         <div class="mt-2 mb-2" id="div_huawei_cloud_links_total_records">Total Records Found: <span class='badge badge-primary badge-pill'>0</span></div>
                         <div class="mt-2 mb-2" id="div_huawei_cloud_links_count">Total Records Fetched: <span class='badge badge-primary badge-pill'>0</span></div>
@@ -471,7 +470,7 @@
                         <!-- <p class="card-text">
                             You can download <code>CSV Document</code>, search for  <code>CloudflareVideoID</code> in your MySQL database and replace it with <code>HuaweiCloudVideoUrl</code>.
                         </p> -->
-                        <div class="mt-2" id="div_huawei_cloud_links_csv2">0</div>
+                        <div class="mt-2" id="div_huawei_cloud_links_csv2"></div>
                         <div class="mt-2" id="div_huawei_cloud_links_csv"></div>
                         
                     </div>
